--- a/.ebextensions/02_database.config
+++ b/.ebextensions/02_database.config
@@ -1,5 +1,5 @@
-option_settings:
-  aws:elasticbeanstalk:application:environment:
-    # Database connection will be set via environment variables
-    # RDS_HOST, RDS_DB, RDS_USER, RDS_PASSWORD, RDS_PORT should be configured in EB environment
+# Database configuration
+# Database connection will be set via environment variables
+# RDS_HOST, RDS_DB, RDS_USER, RDS_PASSWORD, RDS_PORT should be configured in EB environment
+# This file is kept for documentation purposes
 
