--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ Thumbs.db
 .elasticbeanstalk/
 *.pyc
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
