--- a/requirements.txt
+++ b/requirements.txt
@@ -31,4 +31,8 @@ Flask-Caching==2.1.0
 APScheduler==3.11.0
 
 # Development tools (optional)
-memory-profiler==0.61.0 
+memory-profiler==0.61.0
+
+# Push notifications
+pywebpush==1.14.0
+py-vapid==1.9.0 
