--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ Thumbs.db
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# Firebase service account keys
+*firebase-adminsdk*.json
+gaadimech-crm-firebase-adminsdk*.json
